# cool-id-generator

./: Cargo.toml  README.md
benches/: bench.rs
src/: adjective.rs  animal.rs  job.rs  lib.rs  names.rs  prefix.rs
src/words/: adjective.rs  animal.rs  job.rs  mod.rs  names.rs  prefix.rs
