[package]
authors = ["Pascal Seitz <pascal.seitz@sap.com>"]
description = "generates the best ids, which are fun to read and fun to eat"
edition = "2018"
name = "cool-id-generator"
version = "0.2.0"
readme = "README.md"
repository = "https://github.com/PSeitz/cool-id-generator"
homepage = "https://github.com/PSeitz/cool-id-generator"
keywords = ["id", "generator", "human", "readable"]
license = "Unlicense"

[dependencies]
rand = "0.7.3"
