[package]
authors = ["Pascal Seitz <pascal.seitz@sap.com>", "mriise <mark.riise26@gmail.com>"]
description = "generates the best ids, which are fun to read and fun to eat"
edition = "2018"
name = "cool-id-generator"
version = "1.0.0"
readme = "README.md"
repository = "https://github.com/PSeitz/cool-id-generator"
homepage = "https://github.com/PSeitz/cool-id-generator"
keywords = ["id", "generator", "human", "readable"]
license = "Unlicense"

[dependencies]
rand = "0.8"
